# Logger

./: CMakeLists.txt  library.json
examples/: main.cpp
src/: Logger.h
